Add login and register in server part
