# pd112.tanmos.com/routes/api.php
@@ -1,8 +1,9 @@
 <?php
 
+use App\Http\Controllers\Api\CategoryController;
+use App\Http\Controllers\AuthController;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\Route;
-use App\Http\Controllers\Api\CategoryController;
 
 /*
 |--------------------------------------------------------------------------
@@ -24,6 +25,10 @@ Route::post('/categories/add', [CategoryController::class, 'insertData']);
 Route::get('/categories/get/{id}', [CategoryController::class, 'getCategory']);
 Route::post('/categories/update/{id}', [CategoryController::class, 'updateCategory']);
 Route::post('/categories/delete/{id}', [CategoryController::class, 'deleteCategory']);
+
+Route::post('/login', [AuthController::class, 'login']);
+Route::post('/register', [AuthController::class, 'register']);
+
 
 
 
